[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/ChaosMeter.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/ui/progress_bar_under.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/ui/progress_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/ui/progress_bar_over.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/ui/faces.png" type="Texture" id=5]
[ext_resource path="res://resources/fonts/SHOWG.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 6 )

[node name="ChaosMeter" type="Control"]
margin_left = 51.0
margin_top = 17.0
margin_right = 575.0
margin_bottom = 194.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChaosProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -41.5
margin_right = 175.5
margin_bottom = 41.5
max_value = 60.0
value = 44.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_under = Color( 1, 1, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faces" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -373.0
margin_top = -146.5
margin_right = 341.0
margin_bottom = 122.5
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusOne" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -64.0
margin_right = 6.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.764706, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.568627, 0.0156863, 0.254902, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 8
text = "-1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusAmount" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -64.0
margin_right = 6.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.764706, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.568627, 0.0156863, 0.254902, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 8
text = "+2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
